增加了独立的css样式表

--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -5,79 +5,23 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>OPEN社团主页</title>
 
-<style type="text/css">
 
-div.pre-blank-field {
-    background-color:white;
-	height:70px;
-	width:100%;
-	clear:both;
-}
-div.logo-field {
-    background-color:rgb(200,255,200);
-    height:170px;
-	width:75%;
-	float:left;
-}
-div.login-field {
-    background-color:rgb(50,255,50);
-    height:170px;
-	width:25%;
-	float:right;
-}
-div.notice-field {
-    height:40px;
-	width:100%;
-	clear:both;
-}
-div.search-field {
-    height:100px;
-	width:100%;
-	border:solid 1px;
-	
-}
-div.development-field {
-    height:150px;
-	width:100%;
-	border:solid 1px;
-}
-div.hot-post-field {
-    height:150px;
-	width:100%;
-	border:solid 1px;
-	
-}
-div.total-post-field {
-    height:300px;
-	width:100%;
-	border:solid 1px;
-}
-div.information-field {
-    height:70px;
-	width:100%;
-}
-
-
-
-img.logo-pic {
-    height:170px;
-}
-
-</style>
-
-
-
+<link rel="stylesheet" type="text/css" href="./GeneralUI.css">
+<link rel="stylesheet" type="text/css" href="./MainUI.css">
 
 
 </head>
 
 <body>
 
+
 <div class="pre-blank-field">
-    <p align='center'>
-	blank left
-    </p>
+    <p align='center'></p>
 </div>
+
+
+
+
 <div class="logo-field">
     <img class='logo-pic' src='../src/include/template/img/logo.png'></img>
 	
