增加了回帖
为什么会少这么一个功能呢=，=

--- a/网页样式/单帖样式.html
+++ b/网页样式/单帖样式.html
@@ -133,8 +133,16 @@
 </div>
 
 
-<p align="center">上一页 X（当前页） 下一页 跳转至<input type="text" size="1">/Y页 <input type="submit" value="跳转"> 共Y页，共Z个回复</pre>
+<p align="center" clear="both">上一页 X（当前页） 下一页 跳转至<input type="text" size="1">/Y页 <input type="submit" value="跳转"> 共Y页，共Z个回复</pre>
 
+
+<div>	
+    <p class="reply-prompt">回帖</p>
+	<input class="reply-input-field" type="text">
+	<br/>
+	<input class="reply-submit-field" type="submit" value="发表">
+	<br/>
+</div>
 
 
 <div class="information-field">
