把图片换成了web格式

--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -20,10 +20,8 @@
 </div>
 
 
-
-
 <div class="logo-field">
-    <img class='logo-pic' src='../src/include/template/img/logo.png'></img>
+    <img class='logo-pic' src='../src/include/template/img/logo.gif'></img>
 	
 </div>
 
