--- a/网页样式/单帖样式.html
+++ b/网页样式/单帖样式.html
@@ -21,7 +21,7 @@
 
 
 <div class="logo-field">
-    <img class='logo-pic' src='../src/include/template/img/logo.png'></img>
+    <img class='logo-pic' src='../src/include/template/img/logo.gif'></img>
 	
 </div>
 
