--- a/网页样式/帖子列表.html
+++ b/网页样式/帖子列表.html
@@ -99,7 +99,7 @@
 
 <div class="do-post-field">
     
-	<h4 class="do-post-prompt-field">发表新主题</h5>
+	<p><b class="do-post-prompt-field">发表新主题</b></p>
 	<input class="do-post-name-input-field">
 	<br/>
 	<input class="do-post-text-input-field">
