便于自动化拆分的注释

--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -12,6 +12,8 @@
 
 </head>
 
+
+
 <body>
 
 
@@ -73,14 +75,16 @@
 </script>
 
 
+<!-- 以上是头部 -->
+
+
 <div class="notice-field">
 <marquee class="notice-marquee">此处发布最新通知</marquee>
 </div>
 
+<!-- 以上是通知栏 -->
 
-<div class="search-field">
-	<pre><input type="text" name="T3" size="16" value="（搜帖栏）">热搜词：XX  XX  XX</pre>
-</div>
+
 
 <br/>
 
@@ -91,6 +95,8 @@
 </div>
 
 <br/>
+
+<!-- 以上是官方动态 -->
 
 
 <div class="hot-post-field">
@@ -105,6 +111,10 @@
 </div>
 
 <br/>
+
+
+<!-- 以上是热帖 -->
+
 
 <div class="total-post-field">
 	
@@ -123,6 +133,15 @@
 </div>
 <br/>
 
+<!-- 以上是交流区 -->
+
+
+<div class="search-field">
+	<pre><input type="text" name="T3" size="16" value="（搜帖栏）">热搜词：XX  XX  XX</pre>
+</div>
+
+<!-- 以上是死去的搜索 -->
+
 <div class="information-field">
 	<p align="center">网页基本信息</p>
 	
@@ -134,13 +153,9 @@
 
 
 
-
-
-
-
 </html>
 
-
+<!-- 以上是网页信息和html结尾 -->
 
 
 
