--- a/网页样式/帖子列表.html
+++ b/网页样式/帖子列表.html
@@ -73,10 +73,14 @@
 </script>
 
 
+<!-- 以上是头部 -->
+
+
 <div class="pre-index">
     <a>主页</a>/<a>次级</a>/<a>次次级</a>
 </div>
 
+<!-- 以上是返回上一级连接，但是和另外一个不一样 -->
 
 
 <div class="post-list-field">
@@ -96,6 +100,8 @@
 
 <p align="center">上一页 X（当前页） 下一页 跳转至<input type="text" size="1">/Y页 <input type="submit" value="跳转"> 共Y页，共Z个回复</p>
 
+<!-- 以上是帖子列表以及翻页 -->
+
 
 <div class="do-post-field">
     
@@ -108,13 +114,12 @@
 </div>
 
 
+<!-- 以上是发布主题 -->
+
 <div class="information-field">
 	<p align="center">网页基本信息</p>
 	
 </div>
-
-
-
 
 
 
@@ -126,7 +131,7 @@
 
 
 
-
+<!-- 以上是网页信息以及html结束 -->
 
 
 
