某些细微改动

--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -32,10 +32,10 @@
 <div class="login-field">
     <?php if(!isset($_SESSION['SysID'])) {?>
 	<form name='test' action='?' method='POST' onsubmit='return matchName();'>
-	<pre>  用户名: <input id ="Name" type='text' name='Name' /></pre>
-	<pre>  密  码: <input id="Code" type='password' name='Code' /></pre>
+	<p class='login-name-field'>用户名:<input id ="Name" type='text' name='Name' /></p>
+	<p class='login-password-field'>密码:<input id="Code" type='password' name='Code' /></p>
 	<input id='action' type='hidden' name='action' value='login' />
-	<pre> <input type='submit' name='submit' value='登录' /></pre>
+	<input type='submit' name='submit' value='登录' class='login-button'/>
 	</form>
 	<?php } else
 	{
@@ -43,7 +43,7 @@
 	?>
 	<form name='test' action='?' method='POST'>
 	<input id='action' type='hidden' name='action' value='logout' />
-	<pre> <input type='submit' name='submit' value='登出' /></pre>
+	<input type='submit' name='submit' value='登出' class='logout-button'/>
 	</form>
 	<?php
 	}
@@ -75,7 +75,7 @@
 </script>
 
 
-<!-- 以上是头部 -->
+<!-- 以上是主页头部 -->
 
 
 <div class="notice-field">
@@ -137,7 +137,7 @@
 
 
 <div class="search-field">
-	<pre><input type="text" name="T3" size="16" value="（搜帖栏）">热搜词：XX  XX  XX</pre>
+	<pre><input type="text" name="T3" size="16" value="（搜帖栏）"/>热搜词：XX  XX  XX</pre>
 </div>
 
 <!-- 以上是死去的搜索 -->
