--- a/网页样式/帖子列表.html
+++ b/网页样式/帖子列表.html
@@ -21,7 +21,7 @@
 
 
 <div class="logo-field">
-    <img class='logo-pic' src='../src/include/template/img/logo.gif'></img>
+    <img class='logo-pic' src='../src/include/template/img/logo.gif'/>
 	
 </div>
 
@@ -36,7 +36,7 @@
 	</div>
 	<div class='login-password-field'>
 	<img class='login-password-pic' src='../src/include/template/img/password.gif'/>
-	<input id="Code" type='password' name='Code' />
+	<input id="Code" type='password' name='Code' maxlength='18'/>
 	</div>
 	<input id='action' type='hidden' name='action' value='login' />
 	<input type='submit' name='submit' value='登录' class='login-button'/>
@@ -114,7 +114,7 @@
 	<p><b class="do-post-prompt-field">发表新主题</b></p>
 	<input class="do-post-name-input-field"/>
 	<br/>
-	<input class="do-post-text-input-field"/>
+	<input class="do-post-text-input-field"/ >
 	<br/>
 	<input class="do-post-submit-button" type="submit" value="发布"/>
 </div>
