--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -38,7 +38,7 @@
 	</div>
 	<div class='login-password-field'>
 	<img class='login-password-pic' src='../src/include/template/img/password.gif'/>
-	<input id="Code" type='password' name='Code' />
+	<input id="Code" type='password' name='Code' maxlength='18'/>
 	</div>
 	<input id='action' type='hidden' name='action' value='login' />
 	<input type='submit' name='submit' value='登录' class='login-button'/>
