--- a/网页样式/单帖样式.html
+++ b/网页样式/单帖样式.html
@@ -57,7 +57,7 @@
 	</div>
 	<div class='login-password-field'>
 	<img class='login-password-pic' src='../src/include/template/img/password.gif'/>
-	<input id="Code" type='password' name='Code' />
+	<input id="Code" type='password' name='Code' maxlength='18'/>
 	</div>
 	<input id='action' type='hidden' name='action' value='login' />
 	<input type='submit' name='submit' value='登录' class='login-button'/>
@@ -173,7 +173,7 @@
 
 <div>	
     <p class="reply-prompt">回帖</p>
-			<textarea class="reply-input-field" id="editor_1" name="content" >KindEditor</textarea>
+			<textarea class="reply-input-field" id="editor_1" name="content" ></textarea>
 	</form>
 	<br/>
 	<input class="reply-submit-field" type="submit" value="发表"/>
