--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -5,11 +5,19 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>OPEN社团主页</title>
 
-
 <link rel="stylesheet" type="text/css" href="./GeneralUI.css">
-<link rel="stylesheet" type="text/css" href="./MainUI.css">
-
-
+<?php 
+if (count($cssList)>0)
+	foreach($cssList as $temp)
+	{
+		echo '<link rel="stylesheet" type="text/css" href="'.BBS_WEB_TEMPLATE.'/'.$temp.'">';
+	}
+if (count($jsList)>0)
+	foreach($jsList as $temp)
+	{
+		echo '<script src="'.BBS_WEB_TEMPLATE.'/'.$temp.'" type="text/javascript"></script>';
+	}
+?>
 </head>
 
 
@@ -41,7 +49,7 @@
 	<input id="Code" type='password' name='Code' maxlength='18'/>
 	</div>
 	<input id='action' type='hidden' name='action' value='login' />
-	<input type='image' name='submit' value='登录' src='../src/include/template/img/login.gif' class='login-button'/>
+	<input type='submit' name='submit' value='登录' class='login-button'/>
 	</form>
 	<?php } else
 	{
@@ -49,7 +57,7 @@
 	?>
 	<form name='test' action='?' method='POST'>
 	<input id='action' type='hidden' name='action' value='logout' />
-	<input type='image' name='submit' value='登出' src='../src/include/template/img/logout.gif' class='logout-button'/>
+	<input type='submit' name='submit' value='登出' class='logout-button'/>
 	</form>
 	<?php
 	}
