--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" type="text/css" href="<?php echo BBS_WEB_TEMPLATE.'/';?>GeneralUI.css">
 <?php 
-if (count($cssList)==0) array_push($cssList,'MainUI.css');
+if (count($cssList)==0) array_push($cssList,'MainUI.css','PostListUI.css');
 foreach($cssList as $temp)
 {
 	echo '<link rel="stylesheet" type="text/css" href="'.BBS_WEB_TEMPLATE.'/'.$temp.'">';
