--- a/网页样式/PostList.html
+++ b/网页样式/PostList.html
@@ -95,16 +95,14 @@
 
 <div class="post-list-field">
     <ul>
-	<li class="single-list-field"></li>
-	<li class="single-list-field"></li>
-	<li class="single-list-field"></li>
-	<li class="single-list-field"></li>
-	<li class="single-list-field"></li>
-	<li class="single-list-field"></li>
-	<li class="single-list-field"></li>
-	<li class="single-list-field"></li>
-	<li class="single-list-field"></li>
-	<li class="single-list-field"></li>
+	<?php
+	for ($i = 0; $i < count($post_list); $i++) {
+	?><li class="single-list-field"><?php
+	    $post = $post_list[$i];
+	    echo $post['PostID'].': '.$post['Title'].'<br/>'.$post['PostAdd'];
+	    ?></li><?php
+	}
+	?>
 	</ul>
 </div>
 
