--- a/网页样式/SinglePost.html
+++ b/网页样式/SinglePost.html
@@ -8,9 +8,9 @@
 <link rel="stylesheet" type="text/css" href="./GeneralUI.css">
 <link rel="stylesheet" type="text/css" href="./SinglePostUI.css">
 
-<link rel="stylesheet" href="editor/kindeditor/themes/default/default.css" />
-		<script charset="utf-8" src="editor/kindeditor/kindeditor-min.js"></script>
-		<script charset="utf-8" src="editor/kindeditor/lang/zh_CN.js"></script>
+<link rel="stylesheet" href="./editor/kindeditor/themes/default/default.css" />
+		<script charset="utf-8" src="./editor/kindeditor/kindeditor-min.js"></script>
+		<script charset="utf-8" src="./editor/kindeditor/lang/zh_CN.js"></script>
 		<script charset="utf-8" src="./KE.js"></script>
 </head>
 
