--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" type="text/css" href="./GeneralUI.css">
 <?php 
-if (count($cssList)==0) array_push($cssList,'MainUI.css','PostListUI.css');
+//if (count($cssList)==0) array_push($cssList,'MainUI.css','PostListUI.css');
 foreach($cssList as $temp)
 {
 	echo '<link rel="stylesheet" type="text/css" href="'.BBS_WEB_TEMPLATE.'/'.$temp.'">'."\n";
@@ -18,6 +18,9 @@ if (count($jsList)>0)
 		echo '<script src="'.BBS_WEB_TEMPLATE.'/'.$temp.'" type="text/javascript"></script>'."\n";
 	}
 ?>
+
+<link rel="stylesheet" type="text/css" href="./MainUI.css">
+
 </head>
 
 
