--- a/网页样式/SinglePost.html
+++ b/网页样式/SinglePost.html
@@ -35,7 +35,7 @@
     <form name='test' action='?' method='POST' onsubmit='return matchName();'>
 	<div class='login-name-field'>
 	<img class='login-name-pic' src='../src/include/template/img/username.gif'/>
-	<input id ="Name" type='text' name='Name' />
+	<input id ="Name" type='text' name='Name' maxlength='14' />
 	</div>
 	<div class='login-password-field'>
 	<img class='login-password-pic' src='../src/include/template/img/password.gif'/>
