--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -137,7 +137,7 @@ if (count($jsList)>0)
 
 <div class="total-post-field">
 	
-	<p height="40">&nbsp; 交流与讨论</p>
+	<a href="?action=postList">交流与讨论</a>
 	
 	<ul>
 		<li>【装饰图案】XXXX</li>
