将帖子列表页和帖子内容页的登录控制整合到HTML样式文件

--- a/网页样式/SinglePost.html
+++ b/网页样式/SinglePost.html
@@ -157,6 +157,9 @@
 <!-- 以上是看回复与翻页 -->
 
 
+<?php
+if (isset($_SESSION['SysID'])) {
+?>
 <div>	
     <p class="reply-prompt">回帖</p>
 
@@ -169,6 +172,9 @@
 	</form>
 	<br/>
 </div>
+<?php
+}
+?>
 
 
 <!-- 以上是回帖部分 -->
