--- a/网页样式/PostList.html
+++ b/网页样式/PostList.html
@@ -115,11 +115,15 @@
 <!-- 以上是帖子列表以及翻页 -->
 
 
+<?php
+if (isset($_SESSION['SysID'])) {
+	$act = '?'.$ListSize.'&';
+?>
 <div class="do-post-field">
     
 	<p><b class="do-post-prompt-field">发表新主题</b></p>
 	<input class="do-post-name-input-field"/>
-	<form id="form1" name="form1" method="post" action="?">
+	<form id="form1" name="form1" method="post" action="<?php echo $act;?>">
 		  <textarea class="do-post-text-input-field" id="editor_1" name="content" ></textarea>
 		  <br/>
 		  <input id="content_1" type="hidden" runat="server" value="" />
@@ -127,7 +131,9 @@
 	      <input class="do-post-submit-button" type="submit" value="发布" onclick='save();'/>
 	</form>
 </div>
-
+<?php
+}
+?>
 
 <!-- 以上是发布主题 -->
 
