--- a/网页样式/PostList.html
+++ b/网页样式/PostList.html
@@ -124,9 +124,10 @@ if (isset($_SESSION['SysID'])) {
 	<p><b class="do-post-prompt-field">发表新主题</b></p>
 	<input class="do-post-name-input-field"/>
 	<form id="form1" name="form1" method="post" action="<?php echo $act;?>">
-		  <textarea class="do-post-text-input-field" id="editor_1" name="content" ></textarea>
-		  <br/>
+		  <textarea class="do-post-text-input-field" id="editor_1" name="content" ></textarea>		  
 		  <input id="content_1" type="hidden" runat="server" value="" />
+		  <input id="doPost" type="hidden" runat="server" name='action' value="doPost"/>
+		  <br/>
 		  <br/>
 	      <input class="do-post-submit-button" type="submit" value="发布" onclick='save();'/>
 	</form>
