--- a/网页样式/PostList.html
+++ b/网页样式/PostList.html
@@ -100,11 +100,15 @@
 <div class="post-list-field">
     <ul>
 	<?php
-	for ($i = 0; $i < count($post_list); $i++) {
-	?><li class="single-list-field"><?php
-	    $post = $post_list[$i];
-	    echo $post['PostID'].': '.$post['Title'].'<br/>'.$post['PostAdd'];
-	    ?></li><?php
+		for ($i = 0; $i < count($post_list); $i++) {
+		$post = $post_list[$i];
+	?>
+		<a href="<?php echo BBS_WEB_ROOT.'/?action=postView&PostID='.$post['PostID'];?>">
+		<li class="single-list-field">
+			<?php echo $post['PostID'].': '.$post['Title'].'<br/>'.$post['PostAdd'];?>
+		</li>
+		</a>
+	<?php
 	}
 	?>
 	</ul>
