--- a/网页样式/PostList.html
+++ b/网页样式/PostList.html
@@ -129,8 +129,8 @@ if (isset($_SESSION['SysID'])) {
 	<form id="form1" name="form1" method="post" action="<?php echo $act;?>">
 		  <input class="do-post-name-input-field" name="title" value=""/>
 		  <textarea class="do-post-text-input-field" id="editor_1" name="content" ></textarea>		  
-		  <input id="content_1" type="hidden" runat="server" value="" />
-		  <input id="doPost" type="hidden" runat="server" name='action' value="doPost"/>
+		  <input id="content_1" type="hidden"  value="" />
+		  <input id="doPost" type="hidden" name='action' value="doPost"/>
 		  <br/>
 		  <br/>
 	      <input class="do-post-submit-button" type="submit" value="发布" onclick='save();'/>
