--- a/网页样式/PostList.html
+++ b/网页样式/PostList.html
@@ -33,7 +33,7 @@
 
 <div class="login-field">
     <?php if(!isset($_SESSION['SysID'])) {?>
-	<form name='test' action='?' method='POST' onsubmit='return matchName();'>
+	<form name='loginForm' action='?' method='POST' onsubmit='return matchName();'>
 	<div class='login-name-field'>
 	<img class='login-name-pic' src='../src/include/template/img/username.gif'/>
 	<input id ="Name" type='text' name='Name' maxlength='14' />
@@ -49,7 +49,7 @@
 	{
 	        echo $_SESSION['Name'].'已经登录。';
 	?>
-	<form name='test' action='?' method='POST'>
+	<form name='logoutForm' action='?' method='POST'>
 	<input id='action' type='hidden' name='action' value='logout' />
 	<input type='image' name='submit' value='登出' src='../src/include/template/img/logout.gif' class='logout-button'/>
 	</form>
@@ -126,7 +126,7 @@ if (isset($_SESSION['SysID'])) {
 <div class="do-post-field">
     
 	<p><b class="do-post-prompt-field">发表新主题</b></p>
-	<form id="form1" name="form1" method="post" action="<?php echo $act;?>">
+	<form id="postForm" name="postForm" method="post" action="?">
 		  <input class="do-post-name-input-field" name="title" id="title" value=""/>
 		  <textarea class="do-post-text-input-field" id="editor_1" name="content" ></textarea>		  
 		  <input id="content_1" type="hidden"  value="" />
