增加了一个好玩的样式 弹性问题还是没解决=。=

--- a/网页样式/newOpen/newOPEN.html
+++ b/网页样式/newOpen/newOPEN.html
@@ -31,18 +31,18 @@
 
         <div class="postList-div-post-field">
             <ul>
-                <li class="postList-post">1号帖子</li>
-                <li class="postList-post">2号帖子</li>
-                <li class="postList-post">3号帖子</li>
-                <li class="postList-post">4号帖子</li>
-                <li class="postList-post">5号帖子</li>
-                <li class="postList-post">6号帖子</li>
-                <li class="postList-post">7号帖子</li>
-                <li class="postList-post">8号帖子</li>
-                <li class="postList-post">9号帖子</li>
-                <li class="postList-post">10号帖子</li>
-                <li class="postList-post">11号帖子</li>
-                <li class="postList-post">12号帖子</li>
+                <li class="postList-post"><a href="">1号帖子</a></li>
+                <li class="postList-post"><a href="">2号帖子</a></li>
+                <li class="postList-post"><a href="">3号帖子</a></li>
+                <li class="postList-post"><a href="">4号帖子</a></li>
+                <li class="postList-post"><a href="">5号帖子</a></li>
+                <li class="postList-post"><a href="">6号帖子</a></li>
+                <li class="postList-post"><a href="">7号帖子</a></li>
+                <li class="postList-post"><a href="">8号帖子</a></li>
+                <li class="postList-post"><a href="">9号帖子</a></li>
+                <li class="postList-post"><a href="">10号帖子</a></li>
+                <li class="postList-post"><a href="">11号帖子</a></li>
+                <li class="postList-post"><a href="">12号帖子</a></li>
             </ul>
         </div>
 
@@ -91,7 +91,7 @@
         </div>
 
         <a href="http://njuopen.org" class="chain-1" target="_blank" >南京大学OPEN主页</a>
-        <a href="" class="chain-2" target="_blank">这是第二条链接</a>
+        <a href="" class="chain-2" target="_blank"><span class="heimu" title="你知道的太多了">这是第二条链接</span></a>
 
         <div class="info-field">
             <ul class="info-list">
