--- a/网页样式/newOpen/newOPEN.html
+++ b/网页样式/newOpen/newOPEN.html
@@ -19,12 +19,12 @@
     <div class="postList-field">
         <div class="postList-div-mark-field">
             <ul>
-                <li class="postList-div-current-mark">版块1</li>
-                <li class="postList-div-general-mark">版块2</li>
-                <li class="postList-div-general-mark">版块3</li>
-                <li class="postList-div-general-mark">版块4</li>
-                <li class="postList-div-general-mark">版块5</li>
-                <li class="postList-div-general-mark">版块6</li>
+                <li class="postList-div-current-mark"><a href="">版块1</a></li>
+                <li class="postList-div-general-mark"><a href="">版块2</a></li>
+                <li class="postList-div-general-mark"><a href="">版块3</a></li>
+                <li class="postList-div-general-mark"><a href="">版块4</a></li>
+                <li class="postList-div-general-mark"><a href="">版块5</a></li>
+                <li class="postList-div-general-mark"><a href="">版块6</a></li>
             </ul>
         </div>
 
