添加返回主页的链接，隐藏调试信息

--- a/网页样式/Open.html
+++ b/网页样式/Open.html
@@ -32,7 +32,7 @@ if (count($jsList)>0)
 
 
 <div class="logo-field">
-    <img class='logo-pic' src='../src/include/template/img/logo.gif'/>
+    <a href="./"><img class='logo-pic' src='../src/include/template/img/logo.gif'/></a>
 	
 </div>
 
