--- a/网页样式/PostList.html
+++ b/网页样式/PostList.html
@@ -25,7 +25,7 @@
 
 
 <div class="logo-field">
-    <img class='logo-pic' src='../src/include/template/img/logo.gif'/>
+    <a href="./"><img class='logo-pic' src='../src/include/template/img/logo.gif'/></a>
 	
 </div>
 
@@ -91,7 +91,7 @@
 
 
 <div class="pre-index">
-    <a>主页</a>/<a>次级</a>/<a>次次级</a>
+    <a href="./">主页</a>/<a>次级</a>/<a>次次级</a>
 </div>
 
 <!-- 以上是返回上一级连接，但是和另外一个不一样 -->
