--- a/网页样式/newOpen/newOPEN.html
+++ b/网页样式/newOpen/newOPEN.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="./stylesheet-newOpen.css" type="text/css">
     <link rel="stylesheet" href="./stylesheet-general.css" type="text/css">
+    <script src="./JS/js-newOpen.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -79,10 +80,10 @@
 
             <div class="login-password-field">
                 <img class="login-password-pic" src="./img/password.gif" />
-                <input class="login-password-input" type="text" id="login-password"/>
+                <input class="login-password-input" type="password" id="login-password"/>
             </div>
 
-            <input class="login-button" type="image" src="./img/login.gif" />
+            <input class="login-button" type="image" src="./img/login.gif" onclick="login_then();" />
            <!-- <input class="logout-button" type="image" src="./img/logout.gif" />-->
             <a class="register-chain" href="./register.html" target="_blank">没有账户？</a>
 
